testsuite/bsc.typechecker/kind/mismatch/Proviso_NonNumUsedNum.bsv.bsc-out.expected
checking package dependencies
compiling Proviso_NonNumUsedNum.bsv
Error: "Proviso_NonNumUsedNum.bsv", line 2, column 25: (T0026)
  The value type `Bit#(k)' was found where a numeric type was expected.
